fixes h2 float on 404 and adjusts letter spacing for headers

--- a/styles/style.less
+++ b/styles/style.less
@@ -88,5 +88,11 @@ li {
 		width:500px;
 		margin:50px auto;
 	}
+
+	.not-found {
+		.header h2 {
+			float: none;
+		}
+	}
 }
 
